tests/if_else/do_no_path.sy
f :: fn a do
    if a == 1 do
        <!>
    elif a == 2 do
        <!>
    end
end

start :: fn do
    f' 3
    f' 0
end

// error: type isn't explicitly set to `void`
